[feature] Work shares refactor and no programmed views
