# gestepm-model-api/src/main/java/com/epm/gestepm/modelapi/shares/noprogrammed/dto/filter/NoProgrammedShareFilterDto.java
@@ -2,14 +2,29 @@ package com.epm.gestepm.modelapi.shares.noprogrammed.dto.filter;
 
 import com.epm.gestepm.lib.cache.CacheKeyBuilder;
 import com.epm.gestepm.lib.cache.UsableAsCacheKey;
+import com.epm.gestepm.lib.dto.OrderableDto;
+import com.epm.gestepm.modelapi.shares.common.dto.ShareStatusDto;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 
+import java.time.LocalDateTime;
 import java.util.List;
 
 @Data
-public class NoProgrammedShareFilterDto implements UsableAsCacheKey {
+@EqualsAndHashCode(callSuper = true)
+public class NoProgrammedShareFilterDto extends OrderableDto implements UsableAsCacheKey {
 
   private List<Integer> ids;
+
+  private List<Integer> userIds;
+
+  private List<Integer> projectIds;
+
+  private LocalDateTime startDate;
+
+  private LocalDateTime endDate;
+
+  private ShareStatusDto status;
 
   @Override
   public String asCacheKey() {
@@ -17,6 +32,12 @@ public class NoProgrammedShareFilterDto implements UsableAsCacheKey {
     final CacheKeyBuilder cacheKeyBuilder = new CacheKeyBuilder();
 
     cacheKeyBuilder.addElement("ids", this.ids);
+    cacheKeyBuilder.addElement("userIds", this.userIds);
+    cacheKeyBuilder.addElement("projectIds", this.projectIds);
+    cacheKeyBuilder.addElement("startDate", this.startDate);
+    cacheKeyBuilder.addElement("endDate", this.endDate);
+    cacheKeyBuilder.addElement("status", this.status);
+    cacheKeyBuilder.addElement("orderable", super.toString());
 
     return cacheKeyBuilder.toString();
   }
